Bug 564638 - [15] 'sealed' and 'permits' disallowed as type identifiers
Change-Id: Ibdef73f9e4098bd3ff08fd41e41b914839ebb2b9
Signed-off-by: Manoj Palat <manpalat@in.ibm.com>